fix: index page with links

--- a/src/backend_flask/templates/index.html
+++ b/src/backend_flask/templates/index.html
@@ -2,6 +2,6 @@
 
 {% block content %}
     <h3>Try these APIs:</h3>
-    <p>/api/time</p>
-    <p>/api/ping/*hostname*</p>
+    <p><a href="/conntest/api/time">/conntest/api/time</a></p>
+    <p><a href="/conntest/api/ping/single?h=google.com">/conntest/api/ping/single?h=google.com</p>
 {% endblock %}
